@startuml

title __RESOURCES's Class Diagram__\n

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.AccountResource {
          + findByEmail()
          + findById()
          + list()
          + saveAccount()
          + savePicture()
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.AuthenticationResource {
          - authenticationManager : AuthenticationManager
          + changePassword()
          + createAuthenticationToken()
          + forgotPassword()
          + refreshAuthenticationToken()
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.AuthenticationResource.PasswordChanger {
          + newPassword : String
          + oldPassword : String
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.CategoryResource {
          + busca()
          + deletar()
          + deletePicture()
          + findAll()
          + findPageByName()
          + getImage()
          + save()
          + saveImage()
          + update()
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.GroupResource {
          + findById()
          + listar()
          + save()
          + update()
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.ItemResource {
          + busca()
          + deletar()
          + deletePicture()
          + findPage()
          + getImage()
          + listByCategory()
          + listItem()
          + listPriceType()
          + listPricesByItem()
          + save()
          + saveImage()
          + saveItemPrice()
          + update()
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.OrderResource {
          + addOrderItem()
          + addPayment()
          + busca()
          + deletar()
          + findDeliveryByOrder()
          + findItensByOrder()
          + findPageByAccount()
          + findPageByName()
          + findPaymentsByOrder()
          + listItem()
          + save()
          + update()
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.StateResouce {
          + listCities()
          + listItem()
      }
    }
  }
  

  namespace br.com.alg.trufflesapi {
    namespace resources {
      class br.com.alg.trufflesapi.resources.TaxDeliveryResouce {
          + deletar()
          + getTaxDelivery()
          + getTaxDeliveryByDistance()
          + listItem()
          + save()
          + update()
      }
    }
  }
  

  br.com.alg.trufflesapi.resources.AccountResource o-- br.com.alg.trufflesapi.services.AccountService : service
  br.com.alg.trufflesapi.resources.AuthenticationResource o-- br.com.alg.trufflesapi.jwt.security.TokenHelper : tokenHelper
  br.com.alg.trufflesapi.resources.AuthenticationResource o-- br.com.alg.trufflesapi.jwt.service.impl.CustomUserDetailsService : userDetailsService
  br.com.alg.trufflesapi.resources.AuthenticationResource +-down- br.com.alg.trufflesapi.resources.AuthenticationResource.PasswordChanger
  br.com.alg.trufflesapi.resources.CategoryResource o-- br.com.alg.trufflesapi.services.CategoryService : service
  br.com.alg.trufflesapi.resources.GroupResource o-- br.com.alg.trufflesapi.services.GroupService : service
  br.com.alg.trufflesapi.resources.ItemResource o-- br.com.alg.trufflesapi.services.ItemService : service
  br.com.alg.trufflesapi.resources.OrderResource o-- br.com.alg.trufflesapi.services.DeliveryService : deliveryService
  br.com.alg.trufflesapi.resources.OrderResource o-- br.com.alg.trufflesapi.services.OrderService : service
  br.com.alg.trufflesapi.resources.StateResouce o-- br.com.alg.trufflesapi.services.StateService : service
  br.com.alg.trufflesapi.resources.TaxDeliveryResouce o-- br.com.alg.trufflesapi.services.TaxDeliveryService : service


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
